--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,11 @@
 # Tmux settings
 
+# Set mouse click to change panes
+set -g mode-mouse on
+set -g mouse-select-pane on
+
 # Set XTerm key bindings
-setw -g xterm-keys on
+#set -g xterm-keys on
 
 # Set colors
 set-option -g default-terminal "screen-256color"
