Updated aliases and tmux.conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,8 @@
 # Tmux settings
 
+# Set mouse click to change panes
+set -g mouse-select-pane on
+
 # Set XTerm key bindings
 setw -g xterm-keys on
 
